tests/spec/non_conformant/errors/extend/placeholder/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/extend/placeholder"

#[allow(unused)]
use super::runner;

mod missing;

mod optional;

mod simple;
